# Game_of_Life

./: CMakeLists.txt  OMPLogic.cpp  main.cpp  sequentialLogic.cpp  threadingLogic.cpp
